[package]
name = "sha256_pow"
version = "0.1.4"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = { version = "^0.1" }
serde = { version = "^1.0", default-features = true, features = ["alloc", "derive"] }
serde_json = "^1.0"
hex = { version = "0.4.3", features = ["serde"] }
sha2 = "0.10.0"
primitive-types = "0.10.1"

[dependencies.getrandom]
version = "^0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[build]
rustflags = ["-C", "target-feature=+simd128"]

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
debug = false